Add fund trough layout and api json array support
