# app/Http/Controllers/Subaccounts/SubaccountCardController.php
@@ -137,7 +137,7 @@ class SubaccountCardController extends Controller
 
     /**
      * @OA\Post(
-     *      path="/api/v1/subaccounts/{uuid}/fund",
+     *      path="/api/v1/subaccounts/{uuid}/fund_layout",
      *      tags={"Subaccount Cards"},
      *      summary="Fund cards for the subaccount specified through a layout",
      *      description="Funds cards for the subaccount specified through a layout",
@@ -207,7 +207,7 @@ class SubaccountCardController extends Controller
      * 
      */
 
-    public function fund(Request $request, $uuid)
+    public function fund_layout(Request $request, $uuid)
     {
         $subaccount = Subaccount::where('UUID', $uuid)->where('AccountId', auth()->user()->Id)->first();
         $wallet = AccountWallet::where('AccountId', auth()->user()->Id)->where('SubAccountId', $subaccount->Id)->first();
@@ -265,6 +265,145 @@ class SubaccountCardController extends Controller
         }
     }
 
+    /**
+     *  @OA\Post(
+     *      path="/api/v1/subaccounts/{uuid}/fund",
+     *      tags={"Subaccount Cards"},
+     *      summary="Fund cards for the subaccount specified",
+     *      description="Funds cards for the subaccount specified",
+     *      security={{"bearerAuth":{}}},
+     * 
+     *      @OA\Parameter(
+     *          name="uuid",
+     *          in="path",
+     *          description="Subaccount UUID",
+     *          required=true,
+     *          @OA\Schema(
+     *              type="string"
+     *          )
+     *      ),
+     * 
+     *      @OA\RequestBody(
+     *          required=true,
+     *          @OA\JsonContent(
+     *              @OA\Property(property="cards", type="array",
+     *                  @OA\Items(
+     *                      @OA\Property(property="card_id", type="string", example="123456", description="Card UUID"),
+     *                      @OA\Property(property="amount", type="string", example="100.00", description="Amount to fund"),
+     *                      @OA\Property(property="description", type="string", example="Funding", description="Description")
+     *                  )
+     *              )
+     *          )
+     *      ),
+     * 
+     *      @OA\Response(
+     *          response="200",
+     *          description="Subaccount retrieved successfully",
+     *          @OA\JsonContent(
+     *              @OA\Property(property="subaccount_id", type="string", example="123456", description="Subaccount UUID"),
+     *              @OA\Property(property="external_id", type="string", example="123456", description="Subaccount ExternalId"),
+     *              @OA\Property(property="description", type="string", example="My subaccount", description="Subaccount Description"),
+     *              @OA\Property(property="wallet", type="object",
+     *                  @OA\Property(property="wallet_id", type="string", example="123456", description="Wallet UUID"),
+     *                  @OA\Property(property="balance", type="string", example="0.00", description="Wallet Balance"),
+     *                  @OA\Property(property="clabe", type="string", example="123456", description="Wallet CLABE"),
+     *                  @OA\Property(property="last_movements", type="array", description="Last movements",  
+     *                      @OA\Items(
+     *                          @OA\Property(property="movement_id", type="string", example="123456", description="Movement UUID"),    
+     *                          @OA\Property(property="card", type="object",
+     *                          @OA\Property(property="card_id", type="string", example="123456", description="Card UUID"),     
+     *                          @OA\Property(property="masked_pan", type="string", example="123456", description="Card Masked PAN"),
+     *                       ),
+     *                       @OA\Property(property="type", type="string", example="deposit", description="Movement Type"),
+     *                       @OA\Property(property="description", type="string", example="Deposit", description="Movement Description"),
+     *                       @OA\Property(property="amount", type="string", example="100.00", description="Movement Amount"),
+     *                       @OA\Property(property="balance", type="string", example="100.00", description="Movement Balance"),
+     *                       @OA\Property(property="date", type="string", example="1716611739", description="Movement Date / Unix Timestamp"),
+     *                  )
+     *                )
+     *          )
+     * 
+     *      )
+     *      ),
+     * 
+     *      @OA\Response(
+     *          response=400,
+     *          description="Error funding cards | Insufficient funds in the subaccount",
+     *          @OA\JsonContent(
+     *              @OA\Property(property="message", type="string", example="Error funding cards. Error message", description="Message")
+     *          )
+     *      ),
+     * 
+     *      @OA\Response(
+     *          response=401,
+     *          description="Unauthorized",
+     *          @OA\JsonContent(
+     *              @OA\Property(property="message", type="string", example="Unauthorized | Error while decoding the token", description="Message")
+     *          )
+     *      ),
+     * 
+     *      @OA\Response(
+     *          response=404,
+     *          description="Subaccount not found or you do not have permission to access it",
+     *          @OA\JsonContent(
+     *              @OA\Property(property="message", type="string", example="Subaccount not found or you do not have permission to access it", description="Message")
+     *         )
+     *      ),
+     *  )
+     * 
+     */
+
+    public function fund(Request $request, $uuid)
+    {
+        $subaccount = Subaccount::where('UUID', $uuid)->where('AccountId', auth()->user()->Id)->first();
+        $wallet = AccountWallet::where('AccountId', auth()->user()->Id)->where('SubAccountId', $subaccount->Id)->first();
+
+        if (!$subaccount) {
+            return self::error('Subaccount not found or you do not have permission to access it', 404, new Exception("Subaccount not found or you do not have permission to access it"));
+        }
+
+        $this->validate($request, [
+            'cards' => 'required|array',
+        ]);
+
+        try {
+            $actions = [];
+            $total = 0;
+
+            foreach ($request->cards as $card) {
+                $card = Card::where('UUID', $card['card_id'])->where('SubAccountId', $subaccount->Id)->first();
+                if (!$card) {
+                    return self::error('Card ' . $card['card_id'] . ' not found or you do not have permission to access it', 404, new Exception("Card " . $card['card_id'] . " not found or you do not have permission to access it"));
+                }
+
+                $actions[] = [
+                    'card' => $card,
+                    'balance' => self::decrypt($card->Balance),
+                    'amount' => floatval($card['amount']),
+                    'new_balance' => self::decrypt($card->Balance) + floatval($card['amount']),
+                    'description' => $card['description'] ?? 'Funding'
+                ];
+
+                $total += floatval($card['amount']);
+            }
+
+            if ($total > self::decrypt($wallet->Balance)) {
+                return self::error('Insufficient funds in the subaccount', 400, new Exception("Insufficient funds in the subaccount"));
+            }
+
+            $resultActions = $this->callActions($wallet, $actions);
+
+            if ($resultActions['result']) {
+                return response()->json(SubaccountController::subaccountObject($subaccount->Id), 200);
+            } else {
+                return self::error('Error funding cards. ' . $resultActions['message'], 400, new Exception('Error funding cards. ' . $resultActions['message']));
+            }
+        } catch (Exception $e) {
+            DB::rollBack();
+            return self::error('Error funding cards', 400, $e);
+        }
+    }
+
     private function callActions($wallet, $actions)
     {
         try {
@@ -282,7 +421,7 @@ class SubaccountCardController extends Controller
                     'ApprovedBy' => auth()->user()->Id,
                     'CardId' => $action['card']->Id,
                     'Type' => 'Transfer Out',
-                    'Description' => 'Transfer to Card. Layout Movement',
+                    'Description' => $action['description'] ?? 'Transfer to Card. Layout Movement',
                     'Amount' => floatval($action['amount'] * -1),
                     'Balance' => floatval($walletBalance),
                     'Reference' => null
@@ -313,7 +452,7 @@ class SubaccountCardController extends Controller
                     'CardId' => $action['card']->Id,
                     'AuthorizationRequestId' => $authorization->Id,
                     'Type' => 'TRANSFER',
-                    'Description' => 'Transfer from Subaccount. Layout Movement',
+                    'Description' => 'Transfer from Subaccount. ' . $action['description'] ?? 'Layout Movement',
                     'Amount' => floatval($action['amount']),
                     'Balance' => floatval($newBalance)
                 ]);
